@@ -1,6 +1,10 @@
 In Development:
 # Mentioning Check 0.9.14 for now, to fix distcheck target until next release
 
+* CMake on MinGW and MSVC was unable to find time related types because
+  time.h was not included. This header is now included for the checks.
+  Patch #53.
+
 * If the test runner process catches a SIGTERM or SIGINT signal the running
   tests are now also killed.
   Patch #52.
